--- a/ong-child/assets/src/sass/base/variables.scss
+++ b/ong-child/assets/src/sass/base/variables.scss
@@ -1,6 +1,7 @@
 // fonts
 $font-1: 'Raleway', sans-serif;
 $font-2: 'Pacifico', cursive;
+$font-icons: 'Glyphicons Halflings';
 $f-size-xs: 16px;
 $f-size-sm: 24px;
 $f-size-md: 30px;
