--- a/ong-child/assets/src/sass/base/bootstrap3/less/bootstrap.less
+++ b/ong-child/assets/src/sass/base/bootstrap3/less/bootstrap.less
@@ -23,12 +23,12 @@
 @import "buttons.less";
 
 // Components
-// @import "component-animations.less";
+@import "component-animations.less";
 // @import "dropdowns.less";
 // @import "button-groups.less";
 // @import "input-groups.less";
 @import "navs.less";
-// @import "navbar.less";
+@import "navbar.less";
 // @import "breadcrumbs.less";
 // @import "pagination.less";
 // @import "pager.less";
