--- a/ong-child/assets/src/sass/bootstrap.scss
+++ b/ong-child/assets/src/sass/bootstrap.scss
@@ -5,7 +5,8 @@
 // molecules
 
 // organisms
-@import 'organisms/menu';
+@import 'organisms/footer';
 @import 'organisms/header';
+@import 'organisms/menu';
 
 // pages
