Latest posts block

--- a/ong-child/assets/src/sass/pages/home.scss
+++ b/ong-child/assets/src/sass/pages/home.scss
@@ -1,6 +1,7 @@
 // molecules
 @import '../molecules/courses';
 @import '../molecules/help-and-donation';
+@import '../molecules/latest-posts';
 @import '../molecules/objective';
 @import '../molecules/student';
 @import '../molecules/voluntary';
